# edu_hub

./: Procfile  README.md  TEAMAGREEMENT.md  db.sqlite3  manage.py  pyproject.toml  requirements.md  requirements.txt  whole.json
accounts/migrations/: 0001_initial.py
edu_hub/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
edu_hub/migrations/: 0001_initial.py  0002_auto_20210714_1451.py  0002_initial.py  0002_rename_messagerecipient_chat.py  0003_auto_20210711_0920.py  0003_auto_20210714_1454.py  0004_alter_member_birth_date.py  0004_post_creator_id2.py  0005_alter_member_birth_date.py  0005_auto_20210715_0023.py  0006_alter_member_birth_date.py  0007_alter_member_birth_date.py  0008_auto_20210711_1246.py  0009_auto_20210711_1312.py  0010_auto_20210711_1313.py  0011_auto_20210711_1406.py  0012_auto_20210711_1409.py  0013_auto_20210711_1411.py  0014_auto_20210712_0729.py  0015_alter_member_birth_date.py  0016_alter_member_birth_date.py  0017_alter_member_birth_date.py  0018_alter_member_birth_date.py  0019_alter_member_birth_date.py  0020_alter_member_birth_date.py  0021_auto_20210712_1918.py  0022_auto_20210712_1933.py
edu_hub_project/: .env.sample  asgi.py  settings.py  urls.py  wsgi.py
templates/: _base.html
templates/pages/: home.html
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20210714_1454.py
